Make minor adjustments (wrap, buttons, etc.) To do: fix image placeholder, maybe replace placeholders?

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     justify-content: stretch;
 }
@@ -51,9 +51,10 @@ body {
 
 .boxes {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     gap: 64px;
+    flex-wrap: wrap;
 }
 
 .box {
@@ -150,11 +151,26 @@ a {
     font-size: 18px;
 }
 
+.footer p, .footer a {
+    font-size: 16px;
+    font-weight: 300;
+    color: #F9FAF8;
+}
+
+.footer a {
+    text-decoration: underline;
+}
+
 button {
     width: 128px;
     height: 32px;
     border-radius: 8px;
     border: none;
+}
+
+button:active {
+    background-color: white;
+    color: #1F2937;
 }
 
 .ad button {
